objects/Language__c.object
<CustomObject><fields>
        <fullName>ISO_Code__c</fullName>
        <label>ISO Code</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Language_Display_Name__c</fullName>
        <inlineHelpText>Name that should be displayed to external users when viewing the Language of a Course/Class</inlineHelpText>
        <label>Language Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Locale_Code__c</fullName>
        <label>Locale Code</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Multibyte__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multibyte</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>SF_ISO_Code__c</fullName>
        <description>The universal ISO language code.</description>
        <inlineHelpText>The universal ISO language code.</inlineHelpText>
        <label>Salesforce ISO Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Show_Names_By__c</fullName>
        <description>Determines the order in which to display Contact names.</description>
        <inlineHelpText>Determines the order in which to display Contact names.</inlineHelpText>
        <label>Show Names By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First, Last</fullName>
                    <default>true</default>
                    <label>First, Last</label>
                </value>
                <value>
                    <fullName>Last, First</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Training_L1_Survey_Link__c</fullName>
        <description>Training level 1 survey</description>
        <label>Training L1 Survey Link</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Language</label><nameField>
        <label>Language</label>
        <type>Text</type>
    </nameField><pluralLabel>Languages</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Language_Display_Name__c</columns>
        <columns>Language_Code__c</columns>
        <columns>Locale_Code__c</columns>
        <columns>SF_ISO_Code__c</columns>
        <columns>ISO_Code__c</columns>
        <columns>Multibyte__c</columns>
        <columns>Training_L1_Survey_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>